# label-loom

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  COMPETITOR_SCAN.md  PRIVACY_AND_SECURITY.md  RELEASE_CHECKLIST.md
examples/: demo_pool.csv  demo_recommendations.csv  sample_data.md
scripts/: demo.py  package_release.py  release_check.py  render_demo_svg.py  verify.py
src/label_loom/: __init__.py  cli.py  domain.py  io.py  service.py
tests/e2e/: test_cli.py  test_learning_curve.py
tests/integration/: test_io_service.py
tests/unit/: test_domain.py
